fix: Align checkbox labels to the center vertically

--- a/css/application.css
+++ b/css/application.css
@@ -747,9 +747,11 @@ header {
 .form__checkboxGroup {
   text-transform: uppercase;
   color: #fff;
-  display: flex;
-  align-items: start;
   margin-bottom: 1.25em;
+}
+.form__checkboxGroup label {
+  display: flex;
+  align-items: center;
 }
 .form__checkboxInput {
   display: none;
